# Sydney

./: .gitignore  LICENSE  README.md  config.json  demo.py  pyproject.toml  schema.json
client/: package.json
client/public/: index.html  manifest.json
client/src/: App.js  Flow.js  Host.js  SimpleNodeFactory.js  SimpleNodeModel.js  SimpleNodeWidget.js  SimplePortModel.js  dagre-utils.js
pipelines/: demo.json  demo_2.json  email_triggers.json  overview.json
server/: demo.py  flow.js  requirements.txt  serve_dev.sh  serve_prod.py  serve_prod.sh  sydney.py  utils.py
sydney/: __main__.py  constants.py
sydney/schema/: __init__.py  config_loader.py  config_schemas.py  mongo_collection_schemas.py  mongo_helper.py
sydney/server/: __init__.py  route_adapter.py  routes.py  url_param_parser.py
