[tool.poetry]
name = "sydney"
version = "2.0.0"
description = ""
authors = ["jghibiki <jghibiki.games@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
motor = "^2.1.0"
click = "^7.1.1"
marshmallow = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
